web/libraries/fractal/components/tests/filter/fail/currency-name.twig
{# Euro #}
{{ 'EUR'|currency_name }}

{# Japanese Yen #}
{{ 'JPY'|currency_name }}
